@@ -133,7 +133,7 @@ operation may fail when using such an incompatible client.
   </tr>
 </table>
 
-<h3>Examples</h3>
+<h3>Parameters specified as nested elements</h3>
 
 <h4>module</h4>
 
