@@ -12,3 +12,7 @@ O48f75161|stefan|/tmp/testoutput/*0|ant module 2||ant module 2
 O48f75185|stefan|/tmp/testoutput/*0|ant module 2||ant module 2
 O48f75186|stefan|/tmp/testoutput/*0|antmodule1||antmodule1
 O48f75196|stefan|/tmp/testoutput/*0|ant module 2||ant module 2
+O48f75279|stefan|/tmp/testoutput/*0|ant module 2||ant module 2
+O48f75282|stefan|/tmp/testoutput/*0|ant module 2||ant module 2
+O48f75d32|stefan|/tmp/testoutput/*0|ant module 2||ant module 2
+O48f75d34|stefan|/tmp/testoutput/*0|antmodule1||antmodule1
