@@ -1,0 +1,41 @@
+head     1.1;
+branch   1.1.1;
+access   ;
+symbols  start:1.1.1.1 ant:1.1.1;
+locks    ; strict;
+comment  @# @;
+
+
+1.1
+date     2008.10.16.14.51.11;  author stefan;  state Exp;
+branches 1.1.1.1;
+next     ;
+commitid        7f8d48f754df4567;
+
+1.1.1.1
+date     2008.10.16.14.51.11;  author stefan;  state Exp;
+branches ;
+next     ;
+commitid        7f8d48f754df4567;
+
+
+desc
+@@
+
+
+
+1.1
+log
+@Initial revision
+@
+text
+@dark and cloudy.
+@
+
+
+1.1.1.1
+log
+@three times is a charm
+@
+text
+@@
